# OblivousRouting

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.ortools.linux  PATH_ROUTING_TABLE_README.md  Project.toml  README.md  analysis_plot.py  analysis_plot_parallel.py  analysis_plot_running_times.py  electrical_synthetic.csv  experiments.py  generate_random_lgf_graphs.py  main.cpp  plot_experiments.py
.github/workflows/: build-ortools.yml  ci.yml  workflow.yml
app/: main.cpp
configs/: amg_configs.json  amg_configs_multiple_params.json
examples/: example_congestion_computation.cpp  example_path_routing.cpp  example_path_tracking.cpp
experiments/Rocketfuel_Topologies/: 3967.lgf  AS3967.lgf  AS6461.lgf  Atnt.lgf
experiments/SNDLib_Topologies/: 17_optic_german.lgf  79_optic_nfsnet.lgf
experiments/amg_experiments/: amg_parameterized.h
experiments/datasets/: as-caida20040105.lgf  clean_file.py
experiments/performance/: LP_Oblivious_Ratio.cpp  LP_Oblivious_Ratio.h  Performance.cpp  Performance.h  linear_oblivious_routing_ratio.cpp  linear_oblivious_routing_ratio.h
experiments/random/: toy.lgf
include/algorithms/: solver.h
result/: yates.csv
results/: combine.csv  expander_4_3_2026.csv  generated_graphs.csv  merged_csv.csv  test_small_uniform.csv
scripts/: analyze_dataset.py  batch_caida_to_lgf.py  caida_to_lgf.py  caide_graphs_to_lgf.py  collect_data.sh  convert_caida_to_lgf.py  generate_4_families.py  generate_graph_from_input.py  generate_large_graphs.sh  generate_large_weighted_graphs.py  generate_random_lgf_graphs.py  generate_synthetic_graph.py  generate_topologies.py  merge_csv.py  plot_all.py  plot_cycle_removal.py  plot_experiments.py  plot_experiments_pro.py  plot_hst.py  plot_mendel.py  plot_sketching.py  run_all_plots.sh  run_batch.sh  run_experiments.py  run_experiments.sh  run_experiments_electrical_parallel.sh  run_experiments_in_parallel.sh  run_experiments_using_binary.sh  run_large_instances.sh  run_parallel_experiments.sh
src/: CMakeLists.txt  graph.cpp  graph.h  graph_csr.h  parse_parameter.h
src/datastructures/: GraphADJ.cpp  GraphADJ.h  GraphADJList.cpp  GraphADJList.h  GraphADJMatrix.cpp  GraphADJMatrix.h  GraphCSR.cpp  GraphCSR.h  IGraph.h  Igraph.h  distance.h  graph.cpp  graph.h  graph_csr.cpp  graph_csr.h
src/electrical/: AMGSolver.cpp  AMGSolver.h  LaplacianSolver.jl  electrical.cpp  electrical.h  electrical_flow_naive.cpp  electrical_flow_naive.h  electrical_flow_optimized.cpp  electrical_flow_optimized.h  electrical_flow_par_batches.cpp  electrical_flow_par_batches.h  electrical_flow_parallel.cpp  electrical_flow_parallel.h  electrical_flow_parallel_on_the_fly.cpp  electrical_flow_parallel_on_the_fly.h  laplcian_solver.cpp  laplcian_solver.h
src/electrical/laplacian_solvers/: AMGBiCGStab.cpp  AMGBiCGStab.h  AMGSolver.cpp  AMGSolver.h  AMGSolverParallel.cpp  AMGSolverParallel.h  GraphToLaplacian.h  LaplacianSolver.h  LaplacianSolverFactory.h  SolverTypes.h
src/electrical/parallel/: electrical_flow_par_batches.cpp  electrical_flow_par_batches.h
src/expanders/: xcut_expander_hierarchy.cpp  xcut_expander_hierarchy.h
src/lp_solver/: LPSolver.cpp  LPSolver.h  LP_Base.h  MCCF_lp_solver.cpp  MCCF_lp_solver.h
src/solver/: mwu_framework.h  routing_table.h  solver.h
src/tree_based/: efficient_raecke_base.h  efficient_raecke_transform.h  fast_ckr.h  flat_hst.h  frt.h  hst.h  mst.h  raecke_base.h  raecke_framework.h  raecke_linear_routing.cpp  raecke_linear_routing.h  raecke_mwu.h  raecke_oracle.h  raecke_oracle_iteration.h  raecke_solver.cpp  raecke_solver.h  raecke_transform.cpp  raecke_transform.h  raecke_transform_base.h  raecke_tree.h  raecke_tree_decomp.cpp  raecke_tree_decomp.h  random_mst.h  tree_mwu.h  tree_oracle.h  tree_transform.h
src/tree_based/ckr/: ckr_optimized_efficient_scaling.cpp  ckr_optimized_efficient_scaling.h  ckr_partition.cpp  ckr_partition.h  ckr_tree_decomposer.cpp  ckr_tree_decomposer.h  efficient_oracle_ckr.cpp  efficient_oracle_ckr.h  raecke_ckr_optimized.cpp  raecke_ckr_optimized.h  raecke_ckr_solver.h  raecke_ckr_transform.h  raecke_mwu_ckr.h  raecke_oracle_ckr.h
src/tree_based/ckr/optimized/: efficient_oracle_ckr.cpp  efficient_oracle_ckr.h  efficient_raecke_ckr.h  efficient_raecke_ckr_transform.cpp  efficient_raecke_ckr_transform.h
src/tree_based/ckr/utils/: quotient_graph.h  ultrametric_tree.cpp
src/tree_based/frt/: efficient_frt.cpp  efficient_frt.h  frt_node.h  raecke_frt.cpp  raecke_frt.h  raecke_frt_solver.h  raecke_frt_transform.h  raecke_mwu_frt.h  raecke_oracle_frt.h
src/tree_based/frt/mcct/: Node.h  Tree.h  mcct_derandomized_weighted_solver.cpp  mcct_derandomized_weighted_solver.h
src/tree_based/mcct/: Node.cpp  mcct_derandomized_weighted_solver.cpp  mcct_derandomized_weighted_solver.h
src/tree_based/optimized_versions/: raecke_optimized_base.h
src/tree_based/optimized_versions/frt/: mcct_optimized.cpp  mcct_optimized.h  raecke_frt_opt.cpp  raecke_frt_opt.h  raecke_frt_transform_opt.h
src/tree_based/random_mst/: mst.h  raecke_mst_solver.cpp  raecke_mst_solver.h  raecke_mst_transform.h  raecke_mwu_random.h  raecke_oracle_random.h  raecke_random_mst.cpp  raecke_random_mst.h
src/tree_based/utils/: quotient_graph.h  ultrametric_tree.cpp  ultrametric_tree.h
src/utils/: hash.h  lca_datstructure.h  my_math.cpp  my_math.h  priority_queue.h
test/: CMakeLists.txt  main.cpp
test/integration/: CMakeLists.txt  lp_solver_test.cpp  mcct_node.cpp  raecke_test.cpp  stress_test.cpp
test/integration/datastructures/: graph_base.cpp  graph_base.h  graph_types.h
test/randomgraphs/: random_graph_generator.h
test/randomgraphs/small/: graph_1000_50.dimacs  graph_100_15.dimacs  graph_10_6.dimacs  graph_150_20.dimacs  graph_200_25.dimacs  graph_300_25.dimacs  graph_350_30.dimacs  graph_400_30.dimacs  graph_50_15.dimacs  graph_5_4.dimacs  graph_600_40.dimacs  graph_750_50.dimacs
test/smoke/: CMakeLists.txt  graph_toy_construction.cpp  smoke_test.cpp
test/tiny/: CMakeLists.txt  line_graphCSR_4_nodes.cpp  line_graph_4_nodes.cpp
(+993 files in other folders)
