enable_testing()

# --------------------------------------------------
# Add the tiny correctness-test directory
# --------------------------------------------------
add_subdirectory(tiny)


# --------------------------------------------------
# Add the integration correctness-test directory
# --------------------------------------------------
add_subdirectory(integration)


# --------------------------------------------------
# Add the integration correctness-test directory
# --------------------------------------------------
add_subdirectory(smoke)